--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
     "@tanstack/react-query": "^5.62.0",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.8",
     "css-loader": "^7.1.2",
     "framer-motion": "^11.12.0",
