--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "dev:mobile": "next dev -H 0.0.0.0"
   },
   "dependencies": {
-    "@eslint/config-array": "^0.19.0",
-    "@eslint/object-schema": "^2.1.4",
-    "@tanstack/react-query": "^5.62.0",
+    "@eslint/object-schema": "^2.1.5",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "framer-motion": "^11.12.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
